--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,28 @@
+/* 폰트 설정 */
 @font-face {
     src : url("./../fonts/amazonEmber.ttf");
     font-family: "amazon-font"
 }
 
+/* 전 지역에서 통용되는 호버이펙트 설정 */
 .hovereffect:hover{
 	border: white 1px solid; 
-	text-decoration: none
+	text-decoration: none;
+}
+
+.hovereffect{
+	text-decoration: none;
 }
 
 .hovereffect2:hover{
 	color:#B77A1C;
-	text-decoration: none
+	text-decoration: none;
 }
 
+.hovereffect3:hover{
+	content: "Sign in Amazon!";
+
+}
 
 /* 인쇄를 누르면 흑백으로 */
 @media print {
@@ -26,64 +36,68 @@
 
 
 body{
-	font-family: "amazon-font";
 	background-color: #EAEDED;
+	font-family: "amazon-font"
 }
 
 
 /* 헤더 */
 header{
 	overflow: hidden;
-	font-family: "amazon-font";
+	font-family: "amazon-font"
 }
 
 
 /* 헤더의 상단 */
 .top_box {
 	width: 100%;
-	height: 43px;
+	height: 63px;
 	float: left;
 	background-color: #131921;
 	font : white;
 	margin: 0 auto;
 }
 
-.logo{
-	margin-left: -20px;
-	margin-top: -20px;
-	transform: scale(0.6, 0.6);
+#logo{
+	margin-top: -15px;
 	display: inline-block;
 	vertical-align: middle;
 }
 
+#logoImage{
+	margin-left: 10px;
+	margin-top: 10px;
+	width: 120px;
+	height: 50px;
+}
+
 #location{
-	margin-left: -40px;
 	display: inline-block;
+	margin-top:5px;
 }
 
 #locationImage{
-	margin-top: -10px;
-	transform: scale(0.6, 0.6);
 	width:22;
 	height:30;
 	vertical-align:middle;
 }
 
-#delivery{
-	margin-left: -25px;
-	margin-top: -10px;
-	transform: scale(0.7, 0.7);
+#delivery_section_in_header{
 	display: inline-block;
-	margin-top:7px;
+	margin-top: 13px;
+}
+
+#delivery{
+	display: inline-block;
 	position: relative;
 	font-size: 13px;
+	line-height:120%;
 }
 
 #searchbox{
-	margin-top: -48px;
-	transform: scale(0.7, 0.7);
 	position: relative;
-	margin-left: 70px;
+	margin-top: -45px;
+	margin-left: 30px;
 	left: 10px;
 }
 
@@ -104,62 +118,60 @@ header{
 	height:20px;
 }
 
+
 #checkbox_form{
-	width:310px;
+	width:745px;
 }
 
 #rightalign{
-	position: absolute;
-	padding: -5px;
-	right: 10px;
-	overflow: hidden;
+	position:absolute;
+	right: 15px;
+	margin-top: 5px;
 }
 
 #language{
-	margin-top: -30px;
-	margin-left: 50px;
-	transform: scale(0.5, 0.5);
 	display: inline-block;
+	z-index: 9999;
+	display: inline-block;
+	margin-left: -60px;
 }
 
 #language-form{
-	margin-left: -30px;
+	left: -100px;
 	display: inline-block;
+	size: 5
 }
 
 #language-image{
-	margin-left: -15px;
-	width: 30px;
-	height: 30px;
+	width: 40px;
+	height: 40px;
 }
 
 #language-select{
-	margin-top: 25px;
-	margin-left: -15px;
-	width:20px
+	width:20px;	
+	background: #131921;
 }
 
 #whereto{
-	margin-left: -150px;
-	transform: scale(0.8, 0.7);
-	margin: 1px;
+	font-size:14px;
+	line-height:120%;
+	margin:5px;
 	display: inline-block;
 }
 
 #returnsAndOrders{
-	transform: scale(0.8, 0.7);
-	margin: 1px;
+	font-size:15px;
+	line-height:120%;
+	margin:5px;
 	display: inline-block
 }
 
 #carts{
-	transform: scale(0.8, 0.7);
-	margin: -10px;
-	display: inline-block
+	margin: 5px;
+	display: inline-block;
 }
 
 #cart-image{
-	transform: scale(0.7, 0.7);
 	vertical-align:middle;
 	width: 30;
 	height: 30;
@@ -185,7 +197,6 @@ header{
 }
 
 .sidenav {
-	transform: scale(0.5, 0.5);
 	color: black;
 	list-style:none;
 	height: 100%;
@@ -199,13 +210,14 @@ header{
 	transition: 0.5s;
 	padding-top: 30px;
 }
+
 .sidenav .closebtn {
 	position: absolute;
 	top: 0;
 	right: 25px;
 	font-size: 36px;
 	margin-left: 50px;
-	color: black;
+	color: white;
 }
 li {
 	list-style: none;
@@ -218,9 +230,37 @@ li {
 	
 }
 
+.menu a{
+	text-decoration: none;
+	color: black;
+	cursor:pointer;
+	font-size: 16px;
+}
+.menu .hide{
+	display:none;
+}
+.menu-sign-in{
+	font-size: 20px;
+	background-color: #232F3E;
+	color: white;
+	height: 80px;
+	margin-top: -50px;
+}
+
+#menu-sign-in-2{
+	margin-left: 35px;
+	line-height: 270%;
+}
+.menu-title{
+	font-size: 17px;
+}
+
+.menu{
+	list-style: none;
+}
+
 #notsideBar{
-	transform: scale(0.8, 0.8);
-	margin-left: -15px;
+	margin-left: 70px;
 	padding-top: 3px;
 }
 
@@ -237,25 +277,74 @@ button {
 }
 
 #amazonsResponse{
-	margin-right: -60px;
+	margin-right: 10px;
 	float: right;
 	text-align: center;
 }
 
+/* 회원가입 탭에 마우스오버시 숨겨졌던 div 등장 */
+
+#hidden_div{
+	position: absolute;
+	z-index:2;
+	display:none;
+	margin-left: 850px;
+	margin-top: -32px;
+}
+
+#hidden_div_lower_level{
+	text-align: center;
+	border-radius: 5px;
+	width: 500px;
+	height: 350px;
+	background:white;
+	font: black;
+}
+
+#hidden_div_button{
+	background-color: #F0C454;
+	border-radius: 3px;
+	width: 270px;
+	margin-top: 20px;
+}
+
+#hidden_div_lower_level_left{
+	float: left;
+	margin-left: 30px;
+}
+
+#hidden_div_lower_level_right{
+	float: right;
+	margin-right: 30px;
+}
+
+#hidden_div_language{
+	position: absolute;
+	z-index:2;
+	display:none;
+	margin-left: 1150px;
+	margin-top: -32px;
+}
+
+#hidden_div_language_lower_level{
+	padding-left: 10px;
+	padding-top: 20px;
+	border-radius: 5px;
+	width: 250px;
+	height: 500px;
+	background:white;
+	font: black;
+	font-size: 15px;
+	border: 1px;
+}
 
 /* 레이아웃*/
 
 
 /* SECTION 01 */
-.section01{
-	font-family: "amazon-font";
-	margin-top: -50px;
-	margin-bottom: -50px;
-	margin-left: -375px;
-}
+
 
 .swiper-container {
-	transform: scale(0.5, 0.5);
 	width:600px;
 	height:400px;
 }
@@ -276,9 +365,11 @@ button {
 
 .swiper-container1 {
 	padding: 10px;
+	margin: 0 auto;
 	align-items:center;
-	width: 900px;
-	height: 150px;
+    margin: 0 auto;
+	width: 1800px;
+	height: 500px;
 }
 
 
@@ -291,40 +382,26 @@ button {
 	overflow: hidden;
 	font: black;
 	background-color: #EAEDED;
-	flex: 1;
+	flex:1;
 	float: left;
 }
 
-#sec02box01, #sec02box02, #sec02box03, #sec02box05, #sec02box06, #sec02box07, #sec02box08, #sec04box01{
-	transform: scale(0.8, 0.8);
-	width: 250px;
-	height: 375px;
+#sec02box01, #sec02box02, #sec02box03, #sec02box05, #sec02box06, #sec02box07, #sec02box08, #sec04box01, #sec04box02, #sec04box03, #sec04box04{
 	text-align: middle;
 	border: 1px;
+	margin: 19px;
 	background: white;
-	padding-right: 10px;
-	padding-left: 10px;
+	padding-right: 30px;
+	padding-left: 30px;
 	padding-top: 20px;
 	border: 10px;
 	float: left;
-	overflow: hidden;
-}
-
-.section02-image{
-	transform: scale(0.6, 0.6);
-	margin-left: -30px;
-	margin-top: -30px;
-	margin-bottom: -20px;
-	width: 280px;
-	height: 330px;
 }
 
 #sec02box07{
-	transform: scale(0.6, 0.6);
 	width: 340px;
 	height: 330px; 
 	float: left;
-	overflow: hidden;
 }
 
 .section02-image{
@@ -333,41 +410,35 @@ button {
 }
 
 .section02-image-02{
-	transform: scale(0.5, 0.5);
-	width: 115px;
+	width: 140px;
 	height: 130px;
 }
 
 #sec02box04-01{
-	transform: scale(0.6, 0.6);
 	border: 1px;
+	margin: 19px;
 	background: white;
-	padding-right: -10px;
-	padding-left: -10px;
+	padding-right: 30px;
+	padding-left: 30px;
 	padding-top: 20px;
-	margin-left: -35px;
-	margin-right: -35px;
 	text-align: center;
 	float: left;
-	border: 1px;
+	border: 10px;
 	width: 320px;
 	height: 170px;
 }
 
 #sec02box04-01-button{
-	transform: scale(0.6, 0.6);
 	background-color: #F0C454;
-	border-radius: 20px;
+	border-radius: 5px;
 	width: 270px;
 }
 
 #sec02box04-02-image{
-	transform: scale(0.6, 0.6);
 	width: 250px;
 	height: 255px;
 	float: left;
-	margin-left: -255px;
-	margin-top: 100px;
+	margin-left: 60px;
 }
 
 #sec02box05, #sec02box06, #sec02box0701, #sec02box0702, #sec02box0703, #sec02box0704{
@@ -375,33 +446,26 @@ button {
 	float: left;
 }
 
-#sec02box07{
-	transform: scale(0.8, 0.8);
-	width: 250px;
-	height: 375px;
+#sec02box07, #sec04box01{
 	text-align: middle;
 	border: 1px;
+	margin: 19px;
 	background: white;
-	padding-right: 10px;
-	padding-left: 10px;
 	padding-top: 20px;
-	border: 10px;
-	overflow: hidden;
-	float: left;
+	padding-left: 30px;
+	padding-right: 15px;
+	padding-bottom: 405px;
 }
 
-
 #sec02box08{
-	transform: scale(0.8, 0.8);
 	border: 10px;
 	float: left;
+	margin-right: 26px;
 }
 
 #sec02box08-image{
-	transform: scale(0.6, 0.6);
-	width: 250px;
-	height: 255px;
-	float: left;
+	width: 280px;
+	height: 330px;
 }
 
 #sec02box0701, #sec02box0702, #sec02box0703, #sec02box0704, #sec04box0101, #sec04box0102, #sec04box0103, #sec04box0104{
@@ -409,7 +473,6 @@ button {
 	border: 1px;
 	margin: 0px;
 	background: white;
-	
 }
 
 
@@ -421,16 +484,10 @@ a{
 
 /* SECTION 03 */
 
+
 #section03{
 	font-family: "amazon-font";
-	margin-top: 900px;
-	margin-left: -150px;
-	margin-bottom: 150px;
-	transform: scale(0.7, 0.7);
-}
-
-.swiper-container2{
-	position: absolute;
+	background-color: white;
 }
 
 #ama01{
@@ -488,50 +545,25 @@ a{
 	float: left;
 }
 
-#sec04box01{
-	margin-top: -57px;
-	margin-left: -45px;
-	margin-right: -45px;
-	padding-top: 80px;
-	transform: scale(0.6, 0.6);
-	width: 340px;
-	height: 330px; 
+.section04-basic-setting{
+	border: 10px;
 	float: left;
-	overflow: hidden;
-	padding-bottom: 400px;
 }
 
-.section04-basic-setting{
-	transform: scale(0.8, 0.8);
-	border: 1px;
+#sec04box01{
+	width: 340px;
+	height: 330px;
 	float: left;
 }
 
 .sec04-box04-image{
-	margin-left: 35px;
-	width: 115px;
+	width: 140px;
 	height: 130px;
 }
 
 .sec04-box04-image02{
-	transform: scale(0.8, 0.8);
-	width: 230px;
-	height: 270px;
-}
-
-#sec04box02, #sec04box03, #sec04box04{
-	transform: scale(0.8, 0.8);
-	width: 250px;
-	height: 375px;
-	text-align: middle;
-	border: 1px;
-	background: white;
-	padding-right: 10px;
-	padding-left: 10px;
-	padding-top: 20px;
-	border: 10px;
-	float: left;
-	overflow: hidden;
+	width: 280px;
+	height: 330px;
 }
 
 
@@ -550,28 +582,26 @@ a{
 #backToTop{
 	background-color: #485769;
 	text-align:center;
-	width:650px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	width: 1519px;
 }
 
 #bgcolor1{
 	position: relative;
-	width:650px;
 }
 
 #bgcolor1-image{
-	width: 650px;
+	width: 1400px;
 	height: 400px;
 	z-index: 0;
 }
 
 .footer-section01{
-	width: 750px;
-	transform: scale(0.8, 0.8); 
-	/* transform은 크기를 축소시켜주는 또 하나의 방식 */
 	background: #232F3E;
-	font-size: 13px;
+	font-size: 15px;
 	position: absolute;
-	margin-left: -50px;
+	margin-left: 250px;
 	margin-top: -400px;
 	text-align: left;
 	z-index: 1;
@@ -581,8 +611,8 @@ a{
 #fs01-01, #fs01-02, #fs01-03, #fs01-04{
 	float: left;
 	background: #232F3E;
-	margin-left: 5px;
-	margin-right: 5px;
+	margin-left: 30px;
+	margin-right: 30px;
 }
 
 
@@ -590,22 +620,20 @@ a{
 
 
 #bgcolor2{
-	margin-left: -150px;
 	position: relative;
 }
 
 #bgcolor2-image{
-	margin-left: -150px;
-	width: 750px;
+	width: 1520px;
 	height: 550px;
 	z-index: 0;
 }
 
 .footer-section02{
-	margin-left: 20px;
 	float: left;
 	background: #232F3E;
 	position: relative;
+	margin-left: 450px;
 	margin-top: -720px;
 }
 
@@ -621,22 +649,21 @@ a{
 
 
 .footer-section03{
-	transform: scale(0.5, 0.5);
 	float: left;
 	background: #131A22;
 	position: relative;
 	text-align: left;
-	margin-left: -130px;
+	margin-left: 120px;
 	position: absolute;
-	margin-top: -630px;
+	margin-top: -550px;
 	font-size: 2px;
 }
 
 #fs03-01, #fs03-02, #fs03-03, #fs03-04, #fs03-05, #fs03-06, #fs03-07{
 	float: left;
 	background: #131A22; 
-	margin-left: 15px;
-	margin-right: 15px;
+	margin-left: 35px;
+	margin-right: 35px;
 }
 
 
@@ -644,13 +671,11 @@ a{
 
 
 .footer-section04{
-	width: auto;
-	transform: scale(0.8, 0.8);
 	float: left;
 	background: #131A22;
 	position: relative;
 	padding: 50px;
-	margin-left: -70px;
+	margin-left: 370px;
 	position: absolute;
 	margin-top: -150px;
 }
