--- a/css/mobile.css
+++ b/css/mobile.css
@@ -40,18 +40,17 @@ body{
 	font-family: "amazon-font"
 }
 
-
 /* 헤더 */
 header{
 	overflow: hidden;
-	font-family: "amazon-font"
+	font-family: "amazon-font";
 }
 
 
 /* 헤더의 상단 */
 .top_box {
 	width: 100%;
-	height: 63px;
+	height: 43px;
 	float: left;
 	background-color: #131921;
 	font : white;
@@ -72,11 +71,13 @@ header{
 }
 
 #location{
+	margin-left: -40px;
 	display: inline-block;
-	margin-top:5px;
 }
 
 #locationImage{
+	margin-top: -10px;
+	transform: scale(0.6, 0.6);
 	width:22;
 	height:30;
 	vertical-align:middle;
@@ -90,14 +91,15 @@ header{
 #delivery{
 	display: inline-block;
 	position: relative;
-	font-size: 13px;
+	font-size: 3px;
 	line-height:120%;
 }
 
 #searchbox{
+	margin-top: -48px;
+	transform: scale(0.7, 0.7);
 	position: relative;
-	margin-top: -45px;
-	margin-left: 30px;
+	margin-left: 70px;
 	left: 10px;
 }
 
@@ -118,61 +120,62 @@ header{
 	height:20px;
 }
 
-
 #checkbox_form{
-	width:745px;
-	height: 36px;
+	width:310px;
 }
 
 #rightalign{
-	position:absolute;
-	right: 15px;
-	margin-top: 5px;
+	position: absolute;
+	padding: -5px;
+	right: 10px;
+	overflow: hidden;
 }
 
 #language{
+	margin-top: -30px;
+	margin-left: 50px;
+	transform: scale(0.5, 0.5);
 	display: inline-block;
-	z-index: 9999;
-	display: inline-block;
-	margin-left: -60px;
 }
 
 #language-form{
-	left: -100px;
+	margin-left: -30px;
 	display: inline-block;
-	size: 5
 }
 
 #language-image{
-	width: 40px;
-	height: 40px;
+	margin-left: -15px;
+	width: 30px;
+	height: 30px;
 }
 
 #language-select{
-	width:20px;	
-	background: #131921;
+	margin-top: 25px;
+	margin-left: -15px;
+	width:20px
 }
 
 #whereto{
-	font-size:14px;
-	line-height:120%;
-	margin:5px;
+	margin-left: -150px;
+	transform: scale(0.8, 0.7);
+	margin: 1px;
 	display: inline-block;
 }
 
 #returnsAndOrders{
-	font-size:15px;
-	line-height:120%;
-	margin:5px;
+	transform: scale(0.8, 0.7);
+	margin: 1px;
 	display: inline-block
 }
 
 #carts{
-	margin: 5px;
-	display: inline-block;
+	transform: scale(0.8, 0.7);
+	margin: -10px;
+	display: inline-block
 }
 
 #cart-image{
+	transform: scale(0.7, 0.7);
 	vertical-align:middle;
 	width: 30;
 	height: 30;
@@ -198,6 +201,7 @@ header{
 }
 
 .sidenav {
+	transform: scale(0.5, 0.5);
 	color: black;
 	list-style:none;
 	height: 100%;
@@ -218,8 +222,9 @@ header{
 	right: 25px;
 	font-size: 36px;
 	margin-left: 50px;
-	color: white;
+	color: black;
 }
+
 li {
 	list-style: none;
 	padding: 2px 2px 2px 25px;
@@ -237,6 +242,7 @@ li {
 	cursor:pointer;
 	font-size: 16px;
 }
+
 .menu .hide{
 	display:none;
 }
@@ -252,6 +258,16 @@ li {
 	margin-left: 35px;
 	line-height: 270%;
 }
+
+.sidebar-hr-margin{
+	margin-left: -100px;
+}
+
+#sidebar-span{
+	font-size:20px;
+	cursor:pointer
+}
+
 .menu-title{
 	font-size: 17px;
 }
@@ -261,7 +277,8 @@ li {
 }
 
 #notsideBar{
-	margin-left: 70px;
+	transform: scale(0.8, 0.8);
+	margin-left: -15px;
 	padding-top: 3px;
 }
 
@@ -278,7 +295,7 @@ button {
 }
 
 #amazonsResponse{
-	margin-right: 10px;
+	margin-right: -60px;
 	float: right;
 	text-align: center;
 }
@@ -309,6 +326,11 @@ button {
 	margin-top: 20px;
 }
 
+#hidden_div_button_a{
+	color: black;
+	text-decoration: none;
+}
+
 #hidden_div_lower_level_left{
 	float: left;
 	margin-left: 30px;
@@ -317,6 +339,11 @@ button {
 #hidden_div_lower_level_right{
 	float: right;
 	margin-right: 30px;
+}
+
+
+.hidden_div_lower_level_font{
+	font-size: 3px;
 }
 
 #hidden_div_language{
@@ -339,13 +366,39 @@ button {
 	border: 1px;
 }
 
+.hidden_language_font{
+	color: #405096;
+	font-size: 11px;
+}
+
+.hidden_language_font_2{
+	color: #405096;
+	font-size: 12px;
+}
+
+#us_logo{
+	width:30px;
+	height:30px;
+	margin-left: -10px
+}
+
+.hidden_language_font_3{
+	color: rgb(59, 59, 117);
+}
+
 /* 레이아웃*/
 
 
 /* SECTION 01 */
-
+.section01{
+	font-family: "amazon-font";
+	margin-top: -50px;
+	margin-bottom: -50px;
+	margin-left: -375px;
+}
 
 .swiper-container {
+	transform: scale(0.5, 0.5);
 	width:600px;
 	height:400px;
 }
@@ -366,11 +419,9 @@ button {
 
 .swiper-container1 {
 	padding: 10px;
-	margin: 0 auto;
 	align-items:center;
-    margin: 0 auto;
-	width: 1800px;
-	height: 500px;
+	width: 900px;
+	height: 150px;
 }
 
 
@@ -383,29 +434,30 @@ button {
 	overflow: hidden;
 	font: black;
 	background-color: #EAEDED;
-	flex:1;
+	flex: 1;
 	float: left;
 }
 
-#sec02box01, #sec02box02, #sec02box03, #sec02box05, #sec02box06, #sec02box07, #sec02box08, #sec04box01, #sec04box02, #sec04box03, #sec04box04{
+#sec02box01, #sec02box02, #sec02box03, #sec02box05, #sec02box06, #sec02box07, #sec02box08, #sec04box01{
+	transform: scale(0.8, 0.8);
+	width: 250px;
+	height: 375px;
 	text-align: middle;
 	border: 1px;
-	margin: 19px;
 	background: white;
-	padding-right: 30px;
-	padding-left: 30px;
+	padding-right: 10px;
+	padding-left: 10px;
 	padding-top: 20px;
 	border: 10px;
 	float: left;
-}
-
-#sec02box07{
-	width: 340px;
-	height: 330px; 
-	float: left;
+	overflow: hidden;
 }
 
 .section02-image{
+	transform: scale(0.6, 0.6);
+	margin-left: -30px;
+	margin-top: -30px;
+	margin-bottom: -20px;
 	width: 280px;
 	height: 330px;
 }
@@ -415,31 +467,55 @@ button {
 	height: 130px;
 }
 
+#sec02box07{
+	transform: scale(0.6, 0.6);
+	width: 340px;
+	height: 330px; 
+	float: left;
+	overflow: hidden;
+}
+
+.section02-image{
+	width: 280px;
+	height: 330px;
+}
+
+.section02-image-02{
+	transform: scale(0.5, 0.5);
+	width: 115px;
+	height: 130px;
+}
+
 #sec02box04-01{
+	transform: scale(0.6, 0.6);
 	border: 1px;
-	margin: 19px;
 	background: white;
-	padding-right: 30px;
-	padding-left: 30px;
+	padding-right: -10px;
+	padding-left: -10px;
 	padding-top: 20px;
+	margin-left: -35px;
+	margin-right: -35px;
 	text-align: center;
 	float: left;
-	border: 10px;
+	border: 1px;
 	width: 320px;
 	height: 170px;
 }
 
 #sec02box04-01-button{
+	transform: scale(0.6, 0.6);
 	background-color: #F0C454;
-	border-radius: 5px;
+	border-radius: 20px;
 	width: 270px;
 }
 
 #sec02box04-02-image{
+	transform: scale(0.6, 0.6);
 	width: 250px;
 	height: 255px;
 	float: left;
-	margin-left: 60px;
+	margin-left: -255px;
+	margin-top: 100px;
 }
 
 #sec02box05, #sec02box06, #sec02box0701, #sec02box0702, #sec02box0703, #sec02box0704{
@@ -447,26 +523,33 @@ button {
 	float: left;
 }
 
-#sec02box07, #sec04box01{
+#sec02box07{
+	transform: scale(0.8, 0.8);
+	width: 250px;
+	height: 375px;
 	text-align: middle;
 	border: 1px;
-	margin: 19px;
 	background: white;
+	padding-right: 10px;
+	padding-left: 10px;
 	padding-top: 20px;
-	padding-left: 30px;
-	padding-right: 15px;
-	padding-bottom: 405px;
+	border: 10px;
+	overflow: hidden;
+	float: left;
 }
 
+
 #sec02box08{
+	transform: scale(0.8, 0.8);
 	border: 10px;
 	float: left;
-	margin-right: 26px;
 }
 
 #sec02box08-image{
-	width: 280px;
-	height: 330px;
+	transform: scale(0.6, 0.6);
+	width: 250px;
+	height: 255px;
+	float: left;
 }
 
 #sec02box0701, #sec02box0702, #sec02box0703, #sec02box0704, #sec04box0101, #sec04box0102, #sec04box0103, #sec04box0104{
@@ -474,6 +557,7 @@ button {
 	border: 1px;
 	margin: 0px;
 	background: white;
+	
 }
 
 
@@ -485,10 +569,16 @@ a{
 
 /* SECTION 03 */
 
-
 #section03{
 	font-family: "amazon-font";
-	background-color: white;
+	margin-top: 900px;
+	margin-left: -150px;
+	margin-bottom: 150px;
+	transform: scale(0.7, 0.7);
+}
+
+.swiper-container2{
+	position: absolute;
 }
 
 #ama01{
@@ -547,24 +637,55 @@ a{
 }
 
 .section04-basic-setting{
-	border: 10px;
+	transform: scale(0.8, 0.8);
+	border: 1px;
 	float: left;
 }
 
 #sec04box01{
+	margin-top: -57px;
+	margin-left: -45px;
+	margin-right: -45px;
+	padding-top: 80px;
+	transform: scale(0.6, 0.6);
 	width: 340px;
-	height: 330px;
+	height: 330px; 
+	float: left;
+	overflow: hidden;
+	padding-bottom: 400px;
+}
+
+.section04-basic-setting{
+	transform: scale(0.8, 0.8);
+	border: 1px;
 	float: left;
 }
 
 .sec04-box04-image{
-	width: 140px;
+	margin-left: 35px;
+	width: 115px;
 	height: 130px;
 }
 
 .sec04-box04-image02{
-	width: 280px;
-	height: 330px;
+	transform: scale(0.8, 0.8);
+	width: 230px;
+	height: 270px;
+}
+
+#sec04box02, #sec04box03, #sec04box04{
+	transform: scale(0.8, 0.8);
+	width: 250px;
+	height: 375px;
+	text-align: middle;
+	border: 1px;
+	background: white;
+	padding-right: 10px;
+	padding-left: 10px;
+	padding-top: 20px;
+	border: 10px;
+	float: left;
+	overflow: hidden;
 }
 
 
@@ -583,26 +704,28 @@ a{
 #backToTop{
 	background-color: #485769;
 	text-align:center;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	width: 1519px;
+	width:650px;
 }
 
 #bgcolor1{
 	position: relative;
+	width:650px;
 }
 
 #bgcolor1-image{
-	width: 1400px;
+	width: 650px;
 	height: 400px;
 	z-index: 0;
 }
 
 .footer-section01{
+	width: 750px;
+	transform: scale(0.8, 0.8); 
+	/* transform은 크기를 축소시켜주는 또 하나의 방식 */
 	background: #232F3E;
-	font-size: 15px;
+	font-size: 13px;
 	position: absolute;
-	margin-left: 250px;
+	margin-left: -50px;
 	margin-top: -400px;
 	text-align: left;
 	z-index: 1;
@@ -612,8 +735,8 @@ a{
 #fs01-01, #fs01-02, #fs01-03, #fs01-04{
 	float: left;
 	background: #232F3E;
-	margin-left: 30px;
-	margin-right: 30px;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 
 
@@ -625,17 +748,23 @@ a{
 }
 
 #bgcolor2-image{
-	width: 1520px;
+	margin-left: -150px;
+	width: 750px;
 	height: 550px;
 	z-index: 0;
 }
 
 .footer-section02{
+	margin-left: 20px;
 	float: left;
 	background: #232F3E;
 	position: relative;
-	margin-left: 450px;
 	margin-top: -720px;
+}
+
+#footer-sec2-hr{
+	width: 1567px;
+	margin-left: -500px;
 }
 
 #fs02-01, #fs02-02, #fs02-03, #fs02-04{
@@ -650,21 +779,22 @@ a{
 
 
 .footer-section03{
+	transform: scale(0.5, 0.5);
 	float: left;
 	background: #131A22;
 	position: relative;
 	text-align: left;
-	margin-left: 120px;
+	margin-left: -130px;
 	position: absolute;
-	margin-top: -550px;
+	margin-top: -630px;
 	font-size: 2px;
 }
 
 #fs03-01, #fs03-02, #fs03-03, #fs03-04, #fs03-05, #fs03-06, #fs03-07{
 	float: left;
 	background: #131A22; 
-	margin-left: 35px;
-	margin-right: 35px;
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
 
@@ -672,11 +802,13 @@ a{
 
 
 .footer-section04{
+	width: auto;
+	transform: scale(0.8, 0.8);
 	float: left;
 	background: #131A22;
 	position: relative;
 	padding: 50px;
-	margin-left: 370px;
+	margin-left: -70px;
 	position: absolute;
 	margin-top: -150px;
 }
