--- a/css/mobile.css
+++ b/css/mobile.css
@@ -58,20 +58,19 @@ header{
 }
 
 #logo{
-	margin-top: -15px;
 	display: inline-block;
 	vertical-align: middle;
 }
 
 #logoImage{
 	margin-left: 10px;
-	margin-top: 10px;
-	width: 120px;
-	height: 50px;
+	margin-top: -10px;
+	width: 90px;
+	height: 35px;
 }
 
 #location{
-	margin-left: -40px;
+	margin-left: -10px;
 	display: inline-block;
 }
 
@@ -92,15 +91,15 @@ header{
 	display: inline-block;
 	position: relative;
 	font-size: 3px;
-	line-height:120%;
+	line-height: 120%;
+	margin-top: -10px;
 }
 
 #searchbox{
-	margin-top: -48px;
+	margin-top: -33px;
 	transform: scale(0.7, 0.7);
 	position: relative;
-	margin-left: 70px;
-	left: 10px;
+	margin-left: 140px;
 }
 
 .input-group{
@@ -121,19 +120,21 @@ header{
 }
 
 #checkbox_form{
-	width:310px;
+	width: 120px;
 }
 
 #rightalign{
+	transform: scale(0.95,0.95);
 	position: absolute;
-	padding: -5px;
-	right: 10px;
+	right: -5px;
 	overflow: hidden;
 }
 
 #language{
+	display: inline-block;
+	z-index: 9999;
 	margin-top: -30px;
-	margin-left: 50px;
+	margin-left: 0px;
 	transform: scale(0.5, 0.5);
 	display: inline-block;
 }
@@ -156,9 +157,8 @@ header{
 }
 
 #whereto{
-	margin-left: -150px;
-	transform: scale(0.8, 0.7);
 	margin: 1px;
+	transform: scale(0.8, 0.7);
 	display: inline-block;
 }
 
@@ -194,17 +194,20 @@ header{
 }
 
 #sidebar{
+	margin-top: 2px;
 	position: absolute;
 	text-decoration-line: none;
-	margin-left: 10px;
+	margin-left: 17px;
 	display:inline-block;
 }
 
 .sidenav {
-	transform: scale(0.5, 0.5);
+	margin-top: -70px;
+	margin-left: -40px;
+	transform: scale(0.7, 0.7);
 	color: black;
 	list-style:none;
-	height: 100%;
+	height: 80%;
 	width: 0;
 	position: fixed;
 	z-index: 9999;
@@ -232,8 +235,6 @@ li {
 	font-size: 13px;
 	color: black;
 	display: block;
-	margin-left: -40px;
-	
 }
 
 .menu a{
@@ -260,11 +261,11 @@ li {
 }
 
 .sidebar-hr-margin{
-	margin-left: -100px;
+	margin-left: 200px;
 }
 
 #sidebar-span{
-	font-size:20px;
+	font-size: 15px;
 	cursor:pointer
 }
 
@@ -392,14 +393,14 @@ button {
 /* SECTION 01 */
 .section01{
 	font-family: "amazon-font";
-	margin-top: -50px;
+	margin-top: -40px;
 	margin-bottom: -50px;
-	margin-left: -375px;
+	margin-left: -435px;
 }
 
 .swiper-container {
-	transform: scale(0.5, 0.5);
-	width:600px;
+	transform: scale(0.43, 0.5);
+	width: 600px;
 	height:400px;
 }
 
@@ -430,6 +431,7 @@ button {
 
 
 .section02{
+	padding-left: -220px;
 	font-family: "amazon-font";
 	overflow: hidden;
 	font: black;
@@ -438,8 +440,9 @@ button {
 	float: left;
 }
 
-#sec02box01, #sec02box02, #sec02box03, #sec02box05, #sec02box06, #sec02box07, #sec02box08, #sec04box01{
+#sec02box01, #sec02box02, #sec02box03, #sec02box05, #sec02box06, #sec02box07, #sec04box01, #sec02box08{
 	transform: scale(0.8, 0.8);
+	margin-right: -40px;
 	width: 250px;
 	height: 375px;
 	text-align: middle;
@@ -494,7 +497,7 @@ button {
 	padding-left: -10px;
 	padding-top: 20px;
 	margin-left: -35px;
-	margin-right: -35px;
+	margin-right: -65px;
 	text-align: center;
 	float: left;
 	border: 1px;
@@ -514,11 +517,12 @@ button {
 	width: 250px;
 	height: 255px;
 	float: left;
-	margin-left: -255px;
+	margin-left: -217px;
 	margin-top: 100px;
+	margin-right: -50px;
 }
 
-#sec02box05, #sec02box06, #sec02box0701, #sec02box0702, #sec02box0703, #sec02box0704{
+#sec02box05, #sec02box06, #sec02box0701, #sec02box0702, #sec02box0703, #sec02box0704, #sec02box08{
 	border: 10px;
 	float: left;
 }
@@ -562,6 +566,9 @@ button {
 
 
 
+
+
+
 a{
 	text-decoration: none;
 }
@@ -572,12 +579,13 @@ a{
 #section03{
 	font-family: "amazon-font";
 	margin-top: 900px;
-	margin-left: -150px;
+	margin-left: -123px;
 	margin-bottom: 150px;
 	transform: scale(0.7, 0.7);
 }
 
 .swiper-container2{
+	overflow: hidden;
 	position: absolute;
 }
 
@@ -629,10 +637,9 @@ a{
 
 .section04{
 	font-family: "amazon-font";
-	overflow: hidden;
 	font: black;
 	background-color: #EAEDED;
-	flex:1;;
+	flex: 1;;
 	float: left;
 }
 
@@ -643,13 +650,13 @@ a{
 }
 
 #sec04box01{
-	margin-top: -57px;
-	margin-left: -45px;
+	margin-top: -645px;
+	margin-left: 382px;
 	margin-right: -45px;
 	padding-top: 80px;
-	transform: scale(0.6, 0.6);
+	transform: scale(0.6, 0.62);
 	width: 340px;
-	height: 330px; 
+	height: 370px; 
 	float: left;
 	overflow: hidden;
 	padding-bottom: 400px;
@@ -673,7 +680,28 @@ a{
 	height: 270px;
 }
 
-#sec04box02, #sec04box03, #sec04box04{
+#sec04box02, #sec04box03{
+	transform: scale(0.8, 0.8);
+	width: 250px;
+	height: 375px;
+	text-align: middle;
+	border: 1px;
+	background: white;
+	padding-right: 10px;
+	padding-left: 10px;
+	padding-top: 20px;
+	border: 10px;
+	float: left;
+	overflow: hidden;
+}
+
+#sec04box03{
+	margin-left: -30px;
+}
+
+#sec04box04{
+	margin-top: -372px;
+	margin-left: 437px;
 	transform: scale(0.8, 0.8);
 	width: 250px;
 	height: 375px;
@@ -696,47 +724,53 @@ a{
 
 
 #footer{
+	width: 750px;
+	overflow: hidden;
 	text-align: center;
 	background-color: #232F3E;
 	font-family: "amazon-font"
 }
 
 #backToTop{
+	width: 750px;
 	background-color: #485769;
 	text-align:center;
-	width:650px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 #bgcolor1{
+	width: 750px;
 	position: relative;
-	width:650px;
 }
 
 #bgcolor1-image{
-	width: 650px;
+	width: 750px;
 	height: 400px;
 	z-index: 0;
 }
 
 .footer-section01{
-	width: 750px;
-	transform: scale(0.8, 0.8); 
-	/* transform은 크기를 축소시켜주는 또 하나의 방식 */
 	background: #232F3E;
-	font-size: 13px;
+	font-size: 15px;
 	position: absolute;
-	margin-left: -50px;
 	margin-top: -400px;
-	text-align: left;
+	margin-left: 100px;
+	text-align: center;
 	z-index: 1;
 }
 
 
 #fs01-01, #fs01-02, #fs01-03, #fs01-04{
+	font-size: 1px;
 	float: left;
 	background: #232F3E;
-	margin-left: 5px;
-	margin-right: 5px;
+	margin-left: -20px;
+	margin-right: 30px;
+}
+
+#fs01-04{
+	margin-left: -35px;
 }
 
 
@@ -744,18 +778,19 @@ a{
 
 
 #bgcolor2{
+	width: 750px;
 	position: relative;
 }
 
 #bgcolor2-image{
-	margin-left: -150px;
 	width: 750px;
 	height: 550px;
 	z-index: 0;
 }
 
 .footer-section02{
-	margin-left: 20px;
+	margin-left: 140px;
+	text-align: center;
 	float: left;
 	background: #232F3E;
 	position: relative;
@@ -763,15 +798,15 @@ a{
 }
 
 #footer-sec2-hr{
-	width: 1567px;
-	margin-left: -500px;
+	width: 1000px;
+	overflow: hidden;
+	margin-left: -200px;
 }
 
 #fs02-01, #fs02-02, #fs02-03, #fs02-04{
+	text-align: center;
 	float: left;
 	background: #232F3E;
-	margin-left: 15px;
-	margin-right: 15px;
 }
 
 
@@ -779,22 +814,28 @@ a{
 
 
 .footer-section03{
-	transform: scale(0.5, 0.5);
+	transform: scale(0.9,0.9);
+	font-size: 1px;
 	float: left;
 	background: #131A22;
 	position: relative;
 	text-align: left;
-	margin-left: -130px;
+	right: -70px;
 	position: absolute;
-	margin-top: -630px;
-	font-size: 2px;
+	margin-top: -550px;
 }
 
 #fs03-01, #fs03-02, #fs03-03, #fs03-04, #fs03-05, #fs03-06, #fs03-07{
+	transform: scale(0.9,0.9);
+	height: fit-content;
 	float: left;
-	background: #131A22; 
-	margin-left: 15px;
-	margin-right: 15px;
+	font-size: 1px;
+	margin-left: -3px;
+	margin-right: -3px;
+	width: 100px;
+	overflow: hidden;
+	background: #131A22;
+
 }
 
 
@@ -802,13 +843,15 @@ a{
 
 
 .footer-section04{
-	width: auto;
-	transform: scale(0.8, 0.8);
+	left: -25px;
+	text-align: center;
+	font-size: 1px;
+	width: 750px;
+	overflow: hidden;
 	float: left;
 	background: #131A22;
 	position: relative;
 	padding: 50px;
-	margin-left: -70px;
 	position: absolute;
 	margin-top: -150px;
 }
