--- a/css/desktop.css
+++ b/css/desktop.css
@@ -8,6 +8,7 @@
 .hovereffect:hover{
 	border: white 1px solid; 
 	text-decoration: none;
+	cursor: pointer;
 }
 
 .hovereffect{
@@ -34,19 +35,16 @@
     }
 }
 
-
 body{
 	background-color: #EAEDED;
 	font-family: "amazon-font"
 }
-
 
 /* 헤더 */
 header{
 	overflow: hidden;
 	font-family: "amazon-font"
 }
-
 
 /* 헤더의 상단 */
 .top_box {
@@ -55,7 +53,6 @@ header{
 	float: left;
 	background-color: #131921;
 	font : white;
-	margin: 0 auto;
 }
 
 #logo{
@@ -83,8 +80,9 @@ header{
 }
 
 #delivery_section_in_header{
+	padding: 8px;
 	display: inline-block;
-	margin-top: 13px;
+	margin-top: 6px;
 }
 
 #delivery{
@@ -129,7 +127,7 @@ header{
 }
 
 #rightalign{
-	position:absolute;
+	position: absolute;
 	right: 15px;
 	margin-top: 5px;
 }
@@ -531,24 +529,27 @@ a{
 
 
 #section03{
+	margin-top: 15px;
+	margin-bottom: 25px;
 	float: left;
-	padding-left: 30px;
+	margin-left: 20px;
+	margin-right: 50px;
+	padding-left: 10px;
 	font-family: "amazon-font";
 	background-color: white;
-}
-
-.swiper-container2 {
-	background: white;
-	float: left;
+	overflow: hidden;
+	width: 1470px;
 }
 
 #ama01, #ama02, #ama03, #ama04, #ama05, #ama06{
-	width:230px;
-	height:230px;
+	padding-left: -15px;
+	width: 230px;
+	height: 230px;
 	box-shadow: none;
 }
 
 .swiper-container2 {
+	background: white;
 	width: 1520px;;
 	height: 230px;
 	border: 0px;
@@ -593,7 +594,10 @@ a{
 
 
 /* SECTION01 */
-#footer{
+.footer{
+	overflow: hidden;
+	width: 1520px;
+	height: max-content;
 	text-align: center;
 	background-color: #232F3E;
 	font-family: "amazon-font"
