사진 삭제 및 세부사항 수정

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -543,7 +543,7 @@ a{
 	width: 1470px;
 }
 
-#ama01, #ama02, #ama03, #ama04, #ama05, #ama06{
+#icon_slide_01, #icon_slide_02, #icon_slide_03, #icon_slide_04, #icon_slide_05, #icon_slide_06{
 	padding-left: -15px;
 	width: 230px;
 	height: 230px;
