--- a/css/desktop.css
+++ b/css/desktop.css
@@ -50,22 +50,26 @@ header{
 .top_box {
 	width: 100%;
 	height: 63px;
+	margin-bottom: -20px;
 	float: left;
 	background-color: #131921;
 	font : white;
 }
 
 #logo{
-	margin-top: -35px;
-	display: inline-block;
-	vertical-align: middle;
+	margin: 10px 15px 0px 10px;
+	float: left;
 }
 
 #logoImage{
-	margin-left: 10px;
-	margin-top: 10px;
-	width: 120px;
-	height: 50px;
+	width: 110px;
+	height: 47px;
+}
+
+#delivery_section_in_header{
+	height: 47px;
+	float: left;
+	margin: 10px 15px 0px 10px;
 }
 
 #location{
@@ -73,112 +77,93 @@ header{
 }
 
 #locationImage{
-	margin-top: -15px;
 	width: 22;
 	height: 30;
-	vertical-align:middle;
-}
-
-#delivery_section_in_header{
-	padding-top: 10px;
-	display: inline-block;
-	margin-top: 10px;
 }
 
 #delivery{
 	display: inline-block;
 	position: relative;
 	font-size: 13px;
-	line-height: 65%;
-}
-
-#language_chosen{
-	margin-top: 10px;
 }
 
 #searchbox{
-	position: relative;
-	margin-top: -47px;
-	margin-left: 30px;
-	left: 10px;
+	margin: 10px 15px 0px 10px;
+	float: left;
+	position:relative;
+	font: black;
+	width: 810px;
+	height: 35px;
+	border-radius: 7px;
+	overflow: hidden;
+	vertical-align: middle;
+	border: 1px solid rgb(204, 204, 204);
 }
 
-
-.input-group{
-	width:5px;
-}
-
-.input-group-addon {
-	padding: 0!important;
-}
-
-#input-group-addon-select{
-	width: 62px;
-}
-
-#input-group-addon-button{
-	width: 20px;
-	height:20px;
-}
-
-#checkbox_form{
-	width:745px;
+#searchbox_select{
+	float: left;
+	background: #F3F3F3;
 	height: 36px;
+	width: 63px;
+	border: 1px black;
 }
 
-.form-control:hover{
-	border: 100px yellow;
+#searchbox_btn{
+	margin: -10px 0px 0px 10px;
+	width: 41px;
 }
 
-#rightalign{
-	position: absolute;
-	right: 15px;
-	margin-top: 5px;
+#searchbox_input{
+	float: left;
+	width: 700px;
+	height: 35px;
+	border: 1px #686767;
+	margin-right: -10px;
+}
+
+#searchbox_btn_img{
+	width: 45px;
+	height: 45px;
+	margin-left: -12px;
 }
 
 #language{
-	/* height: 40px; */
-	/* padding: 5px;
-	padding-top: 15px; */
-	display: inline-block;
-	/* z-index: 9999;
-	margin-left: -60px; */
+	margin: 10px 15px 0px 10px;
+	float: left;
 }
 
 #language-image{
 	height: 40px;
 	width: 40px;
-	/* margin-top: -5px; */
 }
 
 #whereto{
+	margin: 10px 15px 0px 10px;
+	float: left;
 	height: 45px;
-	padding: 5px;
-	font-size:14px;
+	font-size: 14px;
 	line-height:120%;
-	margin:5px;
-	display: inline-block;
 }
 
 #returnsAndOrders{
+	margin: 10px 15px 0px 10px;
+	float: left;
 	height: 45px;
-	padding: 5px;
-	font-size:15px;
-	line-height:120%;
-	margin:5px;
-	display: inline-block
+	font-size: 14px;
+	line-height: 120%;
 }
 
 #carts{
+	margin-top: -5px;
+	display: flex;
+	align-items:center;
+	margin: 10px 15px 0px 10px;
+	float: left;
 	height: 45px;
-	padding: 5px;
-	padding-top: 15px;
-	display: inline-block;
 }
 
 #cart-image{
-	margin-top: -15px;
-	display: inline-block;
+	float: left;
 	width: 30px; 
 	height: 30px;
 }
@@ -186,9 +171,7 @@ header{
 
 /* 헤더의 하단 */
 .bottom_box {
-	margin-top: -22px;
-	top:-50px;
-	height: 35px;
+	height: 40px;
 	font : white;
 	background: #232F3E;
 	font-size: 15px;
@@ -277,8 +260,15 @@ li {
 }
 
 #notsideBar{
+	display:flex; /* 내용을 중앙정렬 하기위해 flex 사용 */
+	align-items:center; /* 위아래 기준 중앙정렬 */
 	margin-left: 70px;
 	padding-top: 3px;
+}
+
+#amazonsResponse{
+	margin-top: -20px;
+	float: right;
 }
 
 select {
@@ -306,8 +296,7 @@ button {
 	position: absolute;
 	z-index:2;
 	display:none;
-	margin-left: 850px;
-	margin-top: -32px;
+	margin: -32px 0px 0px 850px;
 }
 
 #hidden_div_lower_level{
@@ -347,17 +336,16 @@ button {
 }
 
 #hidden_div_language{
+	line-height: 170%;
 	font-family: "amazon-font";
 	position: absolute;
 	z-index:2;
 	display:none;
-	margin-left: 1150px;
-	margin-top: -32px;
+	margin: -32px 0px 0px 1150px;
 }
 
 #hidden_div_language_lower_level{
-	padding-left: 10px;
-	padding-top: 20px;
+	padding: 20px 0px 0px 10px;
 	border-radius: 5px;
 	width: 250px;
 	height: 500px;
@@ -397,14 +385,16 @@ button {
 	width: 1520px;;
 	height: 230px;
 	border: 0px;
+	margin-bottom: 20px;
 }
 
 .swiper-slide {
 	text-align:center;
-	display:flex; /* 내용을 중앙정렬 하기위해 flex 사용 */
-	align-items:center; /* 위아래 기준 중앙정렬 */
-	justify-content:center; /* 좌우 기준 중앙정렬 */
+	display:flex;
+	align-items:center;
+	justify-content:center;
 }
+
 .swiper-slide img {
 	box-shadow:0 0 5px #555;
 }
@@ -412,17 +402,12 @@ button {
 .swiper-container1 {
 	padding: 10px;
 	margin: 0 auto;
-	align-items:center;
-    margin: 0 auto;
+	align-items: center;
 	width: 1800px;
 	height: 500px;
 }
 
-
-
 /* SECTION 02 */
-
-
 .section02{
 	font-family: "amazon-font";
 	overflow: hidden;
@@ -430,24 +415,59 @@ button {
 	background-color: #EAEDED;
 	flex:1;
 	float: left;
+	margin-bottom: 20px;
 }
 
-#sec02box01, #sec02box02, #sec02box03, #sec02box05, #sec02box06, #sec02box07, #sec02box08, #sec04box01, #sec04box02, #sec04box03, #sec04box04{
+#sec02box01, #sec02box02, #sec02box03, #sec02box05, #sec02box06, #sec02box08, #sec04box02, #sec04box03, #sec04box04{
 	text-align: middle;
-	border: 1px;
-	margin: 19px;
+	margin: 0px 19px 0px 19px;
 	background: white;
-	padding-right: 30px;
-	padding-left: 30px;
-	padding-top: 20px;
+	padding: 20px 30px 20px 30px;
 	border: 10px;
 	float: left;
 }
 
-#sec02box07{
-	width: 340px;
-	height: 330px; 
+#sec02box04-01{
+	margin: 0px 19px 19px 20px;
+	border: 1px;
+	background: white;
+	padding: 20px 30px 20px 30px;
+	text-align: center;
 	float: left;
+	border: 10px;
+	width: 260px;
+	height: 130px;
+}
+
+#sec02box04-01-button{
+	background-color: #F0C454;
+	border-radius: 3px;
+	width: 270px;
+}
+
+
+#sec02box07, #sec04box01{
+	text-align: middle;
+	margin: 0px 19px 0px 19px;
+	background: white;
+	padding: 20px 30px 120px 30px;
+	border: 10px;
+	float: left;
+	width: 275px;
+}
+
+#sec02box0701, #sec02box0702, #sec02box0703, #sec02box0704{
+	text-align: middle;
+	border: 1px;
+	margin: 0px;
+	background: white;
+	border: 10px;
+	float: left;
+}
+
+#sec02box08-image{
+	width: 280px;
+	height: 330px;
 }
 
 .section02-image{
@@ -456,72 +476,25 @@ button {
 }
 
 .section02-image-02{
-	width: 140px;
-	height: 130px;
-}
-
-#sec02box04-01{
-	border: 1px;
-	margin: 19px;
-	background: white;
-	padding-right: 30px;
-	padding-left: 30px;
-	padding-top: 20px;
-	text-align: center;
-	float: left;
-	border: 10px;
-	width: 320px;
-	height: 170px;
-}
-
-#sec02box04-01-button{
-	background-color: #F0C454;
-	border-radius: 5px;
-	width: 270px;
+	width: 135px;
+	height: 110px;
 }
 
 #sec02box04-02-image{
 	width: 250px;
-	height: 255px;
+	height: 230px;
 	float: left;
-	margin-left: 60px;
+	margin: 0px 0px 100px 60px;
 }
 
-#sec02box05, #sec02box06, #sec02box0701, #sec02box0702, #sec02box0703, #sec02box0704{
-	border: 10px;
-	float: left;
-}
-
-#sec02box07, #sec04box01{
-	text-align: middle;
-	border: 1px;
-	margin: 19px;
-	background: white;
-	padding-top: 20px;
-	padding-left: 30px;
-	padding-right: 15px;
-	padding-bottom: 405px;
-}
-
-#sec02box08{
-	border: 10px;
-	float: left;
-	margin-right: 26px;
-}
-
-#sec02box08-image{
-	width: 280px;
-	height: 330px;
-}
-
-#sec02box0701, #sec02box0702, #sec02box0703, #sec02box0704, #sec04box0101, #sec04box0102, #sec04box0103, #sec04box0104{
+#sec04box0101, #sec04box0102, #sec04box0103, #sec04box0104{
 	text-align: middle;
 	border: 1px;
 	margin: 0px;
 	background: white;
+	border: 10px;
+	float: left;
 }
-
-
 
 a{
 	text-decoration: none;
@@ -532,11 +505,8 @@ a{
 
 
 #section03{
-	margin-top: 15px;
-	margin-bottom: 25px;
+	margin: 15px 50px 30px 20px;
 	float: left;
-	margin-left: 20px;
-	margin-right: 50px;
 	padding-left: 10px;
 	font-family: "amazon-font";
 	background-color: white;
@@ -544,22 +514,22 @@ a{
 	width: 1470px;
 }
 
-#icon_slide_01, #icon_slide_02, #icon_slide_03, #icon_slide_04, #icon_slide_05, #icon_slide_06{
-	padding-left: -15px;
-	width: 230px;
-	height: 230px;
-	box-shadow: none;
-}
-
 .swiper-container2 {
+	margin-left: -50px;
 	background: white;
-	width: 1520px;;
+	text-align: center;
+	width: 300px;
 	height: 230px;
 	border: 0px;
 	float: left;
-	text-align: center;
-	overflow: hidden;
-	}
+}
+
+#icon_slide_01, #icon_slide_02, #icon_slide_03, #icon_slide_04, #icon_slide_05, #icon_slide_06{
+	padding-left: -150px;
+	width: 200px;
+	height: 200px;
+	box-shadow: none;
+}
 
 /* SECTION 04 */
 .section04{
@@ -569,16 +539,11 @@ a{
 	background-color: #EAEDED;
 	flex: 1;;
 	float: left;
+	margin-bottom: 30px;
 }
 
 .section04-basic-setting{
 	border: 10px;
-	float: left;
-}
-
-#sec04box01{
-	width: 340px;
-	height: 330px;
 	float: left;
 }
 
@@ -609,15 +574,12 @@ a{
 #backToTop{
 	background-color: #485769;
 	text-align:center;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding: 20px 0px 20px 0px;
 	width: 1520px;
 }
 
 .footer-section01{
-	padding-top: 30px;
-	padding-bottom: 30px;
-	padding-left: 140px;
+	padding: 30px 0px 30px 140px;
 	width: 1520px;
 	height: fit-content;
 	background: #232F3E;
@@ -649,11 +611,13 @@ a{
 }
 
 #fs02-01{
+	vertical-align: middle;
 	display: inline-block;
 	background: #232F3E;
 }
 
 #fs02-02, #fs02-03, #fs02-04{
+	color: white;
 	background: #232F3E;
 	border: 1px white solid;
 	margin-left: 20px;
@@ -662,9 +626,7 @@ a{
 
 /* SECTION03 */
 .footer-section03{
-	padding-top: 30px;
-	padding-bottom: 30px;
-	padding-left: 140px;
+	padding: 30px 0px 30px 140px;
 	float: left;
 	width: 1520px;
 	background: #131A22;
@@ -674,8 +636,7 @@ a{
 #fs03-01, #fs03-02, #fs03-03, #fs03-04, #fs03-05, #fs03-06, #fs03-07{
 	float: left;
 	background: #131A22; 
-	margin-left: 35px;
-	margin-right: 35px;
+	margin: 0px 35px 0px 35px;
 	text-align: left;
 }
 
@@ -683,26 +644,25 @@ a{
 /* SECTION 04 */
 .footer-section04{
 	background: #131A22;
-	padding-top: 30px;
-	padding-bottom: 30px;
+	padding: 30px 0px 30px 0px;
 }
 
 /* 첨가 */
-div.fi {
-	font-family: "amazon-font";
+div.fi{	
+	display: none;
+	/* font-family: "amazon-font";
 	padding: 15px;
 	padding-left: 10px;
 	padding-right: 10px;
 	text-align: center;
 	background-color: white;
-	display: none;
 	position: absolute;
-	z-index: 9999;
 	margin-left: 1200px;
 	margin-top: -35px;
 	font-size: 12px;
 	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
-  }
+ */
+}
 
 .fi:after {
 	border-top:0px solid transparent;
@@ -713,7 +673,8 @@ div.fi {
 	position: absolute;
 	top:-10px;
 	left:70px;
-   }
+}
+
 
 #fi-btn{
 	font-size: 15px;
@@ -723,7 +684,7 @@ div.fi {
 	height: 30px;
 }
 
-.singo_view {
+.hidden_div_1 {
 	overflow: scroll;
 	font-family: "amazon-font";
 	line-height: 170%;
@@ -733,18 +694,18 @@ div.fi {
 	padding: 20px;
 	z-index: 9998;
 	position: absolute;
-	width: 350px;
+	width: 300px;
 	height: 400px;
 	background-color: white;
-	margin-left: 570px;
-	margin-top: 10px;
+	margin: 10px 0px 0px 570px;
 	display: none;
 }
 
-#btn_view_01{
+#hidden_div_1_font{
+	font-size: 20px;
 	overflow: hidden;
-	margin-top: -30px;
-	margin-left: -20px;
+	margin: -40px 0px 0px -20px;
+	padding: 0px 0px 20px 20px;
 	width: 350px;
 	height: 70px;
 	background-color: #F0F0F0;
@@ -778,7 +739,9 @@ div.fi {
   }
 
 #btn_view_03{
+	margin-top: 2px;
 	width: 200px;
+	float: left;
 }
 
 #btn_view_03::placeholder{
@@ -790,10 +753,10 @@ div.fi {
 }
 
 #apply{
+	float: left;
 	width: 80px;
-	margin-left: 10px;
-	padding-left: 15px;
-	padding-right: 15px;
+	margin: 0px 0px 0px 10px;
+	padding: 0x 15px 0px 15px;
 	box-shadow: 0 1px 1px 0 rgba(141, 141, 141, 0.5);
 	background-color: #E3E6E6;
 	border-radius: 3px;
@@ -817,10 +780,8 @@ div.fi {
 
 #done{
 	width: 80px;
-	margin-top: 10px;
-	margin-left: 214px;
-	padding-left: 10px;
-	padding-right: 10px;
+	margin: 10px 0px 0px 214px;
+	padding: 10px 10px 10px 10px;
 	box-shadow: 0 2px 2px 0 rgba(141, 141, 141, 0.5);
 	background-color: #F0C454;
 	border-radius: 3px;
