--- a/css/tablet.css
+++ b/css/tablet.css
@@ -8,10 +8,12 @@
 .hovereffect:hover{
 	border: white 1px solid; 
 	text-decoration: none;
+	cursor: pointer;
 }
 
 .hovereffect{
 	text-decoration: none;
+	cursor: pointer;
 }
 
 .hovereffect2:hover{
@@ -20,8 +22,7 @@
 }
 
 .hovereffect3:hover{
-	content: "Sign in Amazon!";
-
+	border: #F0C454 2px;
 }
 
 /* 인쇄를 누르면 흑백으로 */
@@ -34,167 +35,157 @@
     }
 }
 
-
 body{
 	background-color: #EAEDED;
 	font-family: "amazon-font"
 }
 
-
 /* 헤더 */
 header{
 	overflow: hidden;
-	font-family: "amazon-font";
+	font-family: "amazon-font"
 }
-
 
 /* 헤더의 상단 */
 .top_box {
-	width: 100%;
-	height: 43px;
+	width: fit-content;
+	height: auto;
+	margin-bottom: -20px;
 	float: left;
 	background-color: #131921;
 	font : white;
-	margin: 0 auto;
 }
 
 #logo{
-	display: inline-block;
-	vertical-align: middle;
+	transform: scale(0.8,0.8);
+	margin: 10px 0px 0px 0px;
+	float: left;
 }
 
 #logoImage{
-	margin-left: 10px;
-	margin-top: -10px;
-	width: 90px;
-	height: 35px;
+	width: 110px;
+	height: 47px;
+}
+
+#delivery_section_in_header{
+	transform: scale(0.8,0.8);
+	height: 47px;
+	float: left;
+	margin: 10px -30px 0px -20px;
 }
 
 #location{
-	margin-left: -10px;
 	display: inline-block;
 }
 
 #locationImage{
-	margin-top: -10px;
-	transform: scale(0.6, 0.6);
-	width:22;
-	height:30;
-	vertical-align:middle;
-}
-
-#delivery_section_in_header{
-	display: inline-block;
-	margin-top: 13px;
+	width: 22;
+	height: 30;
 }
 
 #delivery{
 	display: inline-block;
 	position: relative;
-	font-size: 3px;
-	line-height: 120%;
-	margin-top: -10px;
+	font-size: 13px;
 }
 
 #searchbox{
-	margin-top: -38px;
-	transform: scale(0.7, 0.7);
-	position: relative;
-	margin-left: 115px;
-}
-
-.input-group{
-	width:5px;
-}
-
-.input-group-addon {
-	padding: 0!important;
-}
-
-#input-group-addon-select{
-	width: 62px;
-}
-
-#input-group-addon-button{
-	width: 20px;
-	height:20px;
-}
-
-#checkbox_form{
-	width: 220px;
-}
-
-#rightalign{
-	position: absolute;
-	right: 50px;
+	margin-top: 10px;
+	transform: scale(0.8,0.8);
+	float: left;
+	position:relative;
+	font: black;
+	width: 310px;
+	height: 35px;
+	border-radius: 7px;
 	overflow: hidden;
+	vertical-align: middle;
+	border: 1px solid rgb(204, 204, 204);
+}
+
+#searchbox_select{
+	float: left;
+	background: #F3F3F3;
+	height: 36px;
+	width: 63px;
+	border: 1px black;
+}
+
+#searchbox_btn{
+	margin: -10px 0px 0px 10px;
+	width: 41px;
+}
+
+#searchbox_input{
+	float: left;
+	width: 200px;
+	height: 35px;
+	border: 1px #686767;
+	margin-right: -10px;
+}
+
+#searchbox_btn_img{
+	width: 45px;
+	height: 45px;
+	margin-left: -12px;
 }
 
 #language{
-	display: inline-block;
-	z-index: 9999;
-	margin-top: -30px;
-	margin-left: 0px;
-	transform: scale(0.5, 0.5);
-	display: inline-block;
-}
-
-#language-form{
-	margin-left: -30px;
-	display: inline-block;
+	transform: scale(0.8,0.8);
+	margin: 10px 5px 0px -30px;
+	float: left;
 }
 
 #language-image{
-	margin-left: -15px;
-	width: 30px;
-	height: 30px;
-}
-
-#language-select{
-	margin-top: 25px;
-	margin-left: -15px;
-	width:20px
+	transform: scale(0.8,0.8);
+	height: 40px;
+	width: 40px;
 }
 
 #whereto{
-	margin: 1px;
-	transform: scale(0.8, 0.7);
-	display: inline-block;
+	transform: scale(0.8,0.8);
+	margin: 10px 0px 0px 5px;
+	float: left;
+	height: 45px;
+	font-size: 14px;
+	line-height:120%;
 }
 
 #returnsAndOrders{
-	transform: scale(0.8, 0.7);
-	margin: 1px;
-	display: inline-block
+	transform: scale(0.8,0.8);
+	margin: 10px 5px 0px 5px;
+	float: left;
+	height: 45px;
+	font-size: 14px;
+	line-height: 120%;
 }
 
 #carts{
-	transform: scale(0.8, 0.7);
-	margin: -10px;
-	display: inline-block
+	transform: scale(0.8,0.8);
+	margin-top: -5px;
+	display: flex;
+	align-items:center;
+	margin: 7px 5px 0px 5px;
+	float: left;
+	height: 45px;
 }
 
 #cart-image{
-	transform: scale(0.7, 0.7);
-	vertical-align:middle;
-	width: 30;
-	height: 30;
-	margin-top: -20px;
+	float: left;
+	width: 30px; 
+	height: 30px;
 }
 
 
 /* 헤더의 하단 */
 .bottom_box {
-	margin-top: -22px;
-	top:-50px;
-	height: 35px;
+	height: 40px;
 	font : white;
 	background: #232F3E;
 	font-size: 15px;
 }
 
 #sidebar{
-	margin-top: 2px;
 	position: absolute;
 	text-decoration-line: none;
 	margin-left: 10px;
@@ -202,12 +193,9 @@ header{
 }
 
 .sidenav {
-	margin-top: -127px;
-	margin-left: -50px;
-	transform: scale(0.7, 0.7);
 	color: black;
 	list-style:none;
-	height: 80%;
+	height: 100%;
 	width: 0;
 	position: fixed;
 	z-index: 9999;
@@ -225,7 +213,7 @@ header{
 	right: 25px;
 	font-size: 36px;
 	margin-left: 50px;
-	color: black;
+	color: white;
 }
 
 li {
@@ -235,6 +223,8 @@ li {
 	font-size: 13px;
 	color: black;
 	display: block;
+	margin-left: -40px;
+	
 }
 
 .menu a{
@@ -265,7 +255,7 @@ li {
 }
 
 #sidebar-span{
-	font-size: 15px;
+	font-size:20px;
 	cursor:pointer
 }
 
@@ -278,9 +268,15 @@ li {
 }
 
 #notsideBar{
-	transform: scale(0.8, 0.8);
-	margin-left: -15px;
+	display:flex; /* 내용을 중앙정렬 하기위해 flex 사용 */
+	align-items:center; /* 위아래 기준 중앙정렬 */
+	margin-left: 70px;
 	padding-top: 3px;
+}
+
+#amazonsResponse{
+	margin-top: -20px;
+	float: right;
 }
 
 select {
@@ -296,7 +292,7 @@ button {
 }
 
 #amazonsResponse{
-	margin-right: -60px;
+	margin-right: 10px;
 	float: right;
 	text-align: center;
 }
@@ -304,11 +300,11 @@ button {
 /* 회원가입 탭에 마우스오버시 숨겨졌던 div 등장 */
 
 #hidden_div{
+	font-family: "amazon-font";
 	position: absolute;
 	z-index:2;
 	display:none;
-	margin-left: 850px;
-	margin-top: -32px;
+	margin: -32px 0px 0px 850px;
 }
 
 #hidden_div_lower_level{
@@ -344,20 +340,20 @@ button {
 
 
 .hidden_div_lower_level_font{
-	font-size: 3px;
+	font-size: 15x;
 }
 
 #hidden_div_language{
+	line-height: 170%;
+	font-family: "amazon-font";
 	position: absolute;
 	z-index:2;
 	display:none;
-	margin-left: 1150px;
-	margin-top: -32px;
+	margin: -32px 0px 0px 1150px;
 }
 
 #hidden_div_language_lower_level{
-	padding-left: 10px;
-	padding-top: 20px;
+	padding: 20px 0px 0px 10px;
 	border-radius: 5px;
 	width: 250px;
 	height: 500px;
@@ -385,184 +381,128 @@ button {
 
 .hidden_language_font_3{
 	color: rgb(59, 59, 117);
+	font-size: smaller;
 }
 
 /* 레이아웃*/
 
 
 /* SECTION 01 */
-.section01{
-	font-family: "amazon-font";
-	margin-top: -40px;
-	margin-bottom: -50px;
-	margin-left: -370px;
-}
-
 .swiper-container {
-	transform: scale(0.5, 0.6);
-	width: 600px;
-	height:400px;
-}
-
-#swiper-wrapper{
-	background-color: white;
+	margin: 0;
+	width: 1520px;;
+	height: 230px;
+	border: 0px;
+	margin-bottom: 20px;
 }
 
 .swiper-slide {
 	text-align:center;
-	display:flex; /* 내용을 중앙정렬 하기위해 flex 사용 */
-	align-items:center; /* 위아래 기준 중앙정렬 */
-	justify-content:center; /* 좌우 기준 중앙정렬 */
+	display:flex;
+	align-items:center;
+	justify-content:center;
 }
+
 .swiper-slide img {
 	box-shadow:0 0 5px #555;
 }
 
 .swiper-container1 {
 	padding: 10px;
-	align-items:center;
-	width: 900px;
-	height: 150px;
+	margin: 0 auto;
+	align-items: center;
+	width: 1800px;
+	height: 500px;
 }
 
-
-
 /* SECTION 02 */
-
-
 .section02{
-	padding-left: -200px;
 	font-family: "amazon-font";
 	overflow: hidden;
 	font: black;
 	background-color: #EAEDED;
-	flex: 1;
+	flex:1;
 	float: left;
+	margin-bottom: 20px;
 }
 
-#sec02box01, #sec02box02, #sec02box03, #sec02box05, #sec02box06, #sec02box07, #sec02box08, #sec04box01{
-	transform: scale(0.8, 0.8);
-	width: 250px;
-	height: 375px;
+#sec02box01, #sec02box02, #sec02box03, #sec02box05, #sec02box06, #sec02box08, #sec04box02, #sec04box03, #sec04box04{
 	text-align: middle;
-	border: 1px;
+	margin: 0px 19px 0px 19px;
 	background: white;
-	padding-right: 10px;
-	padding-left: 10px;
-	padding-top: 20px;
+	padding: 20px 30px 20px 30px;
 	border: 10px;
 	float: left;
-	overflow: hidden;
-}
-
-.section02-image{
-	transform: scale(0.6, 0.6);
-	margin-left: -30px;
-	margin-top: -30px;
-	margin-bottom: -20px;
-	width: 280px;
-	height: 330px;
-}
-
-.section02-image-02{
-	width: 140px;
-	height: 130px;
-}
-
-#sec02box07{
-	transform: scale(0.6, 0.6);
-	width: 340px;
-	height: 330px; 
-	float: left;
-	overflow: hidden;
-}
-
-.section02-image{
-	width: 280px;
-	height: 330px;
-}
-
-.section02-image-02{
-	transform: scale(0.5, 0.5);
-	width: 115px;
-	height: 130px;
 }
 
 #sec02box04-01{
-	transform: scale(0.6, 0.6);
+	margin: 0px 19px 19px 20px;
 	border: 1px;
 	background: white;
-	padding-right: -10px;
-	padding-left: -10px;
-	padding-top: 20px;
-	margin-left: -35px;
-	margin-right: -35px;
+	padding: 20px 30px 20px 30px;
 	text-align: center;
 	float: left;
-	border: 1px;
-	width: 320px;
-	height: 170px;
+	border: 10px;
+	width: 260px;
+	height: 130px;
 }
 
 #sec02box04-01-button{
-	transform: scale(0.6, 0.6);
 	background-color: #F0C454;
-	border-radius: 20px;
+	border-radius: 3px;
 	width: 270px;
 }
 
-#sec02box04-02-image{
-	transform: scale(0.6, 0.6);
-	width: 250px;
-	height: 255px;
-	float: left;
-	margin-left: -255px;
-	margin-top: 100px;
-}
 
-#sec02box05, #sec02box06, #sec02box0701, #sec02box0702, #sec02box0703, #sec02box0704{
+#sec02box07, #sec04box01{
+	text-align: middle;
+	margin: 0px 19px 0px 19px;
+	background: white;
+	padding: 20px 30px 120px 30px;
 	border: 10px;
 	float: left;
+	width: 275px;
 }
 
-#sec02box07{
-	transform: scale(0.8, 0.8);
-	width: 250px;
-	height: 375px;
+#sec02box0701, #sec02box0702, #sec02box0703, #sec02box0704{
 	text-align: middle;
 	border: 1px;
+	margin: 0px;
 	background: white;
-	padding-right: 10px;
-	padding-left: 10px;
-	padding-top: 20px;
-	border: 10px;
-	overflow: hidden;
-	float: left;
-}
-
-
-#sec02box08{
-	transform: scale(0.8, 0.8);
 	border: 10px;
 	float: left;
 }
 
 #sec02box08-image{
-	transform: scale(0.6, 0.6);
-	width: 250px;
-	height: 255px;
-	float: left;
+	width: 280px;
+	height: 330px;
 }
 
-#sec02box0701, #sec02box0702, #sec02box0703, #sec02box0704, #sec04box0101, #sec04box0102, #sec04box0103, #sec04box0104{
+.section02-image{
+	width: 280px;
+	height: 330px;
+}
+
+.section02-image-02{
+	width: 135px;
+	height: 110px;
+}
+
+#sec02box04-02-image{
+	width: 250px;
+	height: 230px;
+	float: left;
+	margin: 0px 0px 100px 60px;
+}
+
+#sec04box0101, #sec04box0102, #sec04box0103, #sec04box0104{
 	text-align: middle;
 	border: 1px;
 	margin: 0px;
 	background: white;
-	
+	border: 10px;
+	float: left;
 }
-
-
 
 a{
 	text-decoration: none;
@@ -571,123 +511,58 @@ a{
 
 /* SECTION 03 */
 
+
 #section03{
+	margin: 15px 50px 30px 20px;
+	float: left;
+	padding-left: 10px;
 	font-family: "amazon-font";
-	margin-top: 900px;
-	margin-left: -150px;
-	margin-bottom: 150px;
-	transform: scale(0.7, 0.7);
-}
-
-.swiper-container2{
+	background-color: white;
 	overflow: hidden;
-	position: absolute;
+	width: 1470px;
 }
 
-#ama01{
-	width:230px;
+.swiper-container2 {
+	margin-left: -50px;
+	background: white;
+	text-align: center;
+	width: 300px;
 	height: 230px;
-	margin-left: -1000px;
+	border: 0px;
+	float: left;
+}
+
+#icon_slide_01, #icon_slide_02, #icon_slide_03, #icon_slide_04, #icon_slide_05, #icon_slide_06{
+	padding-left: -150px;
+	width: 200px;
+	height: 200px;
 	box-shadow: none;
 }
-
-#ama02{
-	width:230px;
-	height: 230px;
-	margin-left: -950px;
-	box-shadow: none;
-}
-
-#ama03{
-	width:230px;
-	height: 230px;
-	margin-left: -900px;
-	box-shadow: none;
-}
-
-#ama04{
-	width:230px;
-	height: 230px;
-	margin-left: -850px;
-	box-shadow: none;
-}
-
-#ama05{
-	width:230px;
-	height: 230px;
-	margin-left: -800px;
-	box-shadow: none;
-}
-
-#ama06{
-	width:230px;
-	height: 230px;
-	margin-left: -750px;
-	box-shadow: none;
-}
-
 
 /* SECTION 04 */
-
-
 .section04{
 	font-family: "amazon-font";
+	overflow: hidden;
 	font: black;
 	background-color: #EAEDED;
 	flex: 1;;
 	float: left;
+	margin-bottom: 30px;
 }
 
 .section04-basic-setting{
-	transform: scale(0.8, 0.8);
-	border: 1px;
-	float: left;
-}
-
-#sec04box01{
-	margin-top: -655px;
-	margin-left: 455px;
-	margin-right: -45px;
-	padding-top: 80px;
-	transform: scale(0.6, 0.6);
-	width: 340px;
-	height: 330px; 
-	float: left;
-	overflow: hidden;
-	padding-bottom: 400px;
-}
-
-.section04-basic-setting{
-	transform: scale(0.8, 0.8);
-	border: 1px;
+	border: 10px;
 	float: left;
 }
 
 .sec04-box04-image{
-	margin-left: 35px;
-	width: 115px;
+	width: 140px;
 	height: 130px;
 }
 
 .sec04-box04-image02{
-	transform: scale(0.8, 0.8);
-	width: 230px;
-	height: 270px;
-}
-
-#sec04box02, #sec04box03, #sec04box04{
-	transform: scale(0.8, 0.8);
-	width: 250px;
-	height: 375px;
-	text-align: middle;
-	border: 1px;
-	background: white;
-	padding-right: 10px;
-	padding-left: 10px;
-	padding-top: 20px;
-	border: 10px;
-	float: left;
-	overflow: hidden;
+	width: 280px;
+	height: 330px;
 }
 
 
@@ -695,128 +570,227 @@ a{
 
 
 /* SECTION01 */
-
-
-#footer{
-	width: 750px;
+.footer{
 	overflow: hidden;
+	width: 1520px;
+	height: max-content;
 	text-align: center;
 	background-color: #232F3E;
 	font-family: "amazon-font"
 }
 
 #backToTop{
-	width: 750px;
 	background-color: #485769;
 	text-align:center;
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
-
-#bgcolor1{
-	width: 750px;
-	position: relative;
-}
-
-#bgcolor1-image{
-	width: 750px;
-	height: 400px;
-	z-index: 0;
+	padding: 20px 0px 20px 0px;
+	width: 1520px;
 }
 
 .footer-section01{
+	padding: 30px 0px 30px 140px;
+	width: 1520px;
+	height: fit-content;
 	background: #232F3E;
 	font-size: 15px;
-	position: absolute;
-	margin-top: -400px;
-	margin-left: 70px;
 	text-align: center;
 	z-index: 1;
 }
 
-
 #fs01-01, #fs01-02, #fs01-03, #fs01-04{
-	font-size: 2px;
+	text-align: left;
+	margin-left: 100px;
 	float: left;
 	background: #232F3E;
-	margin-left: -10px;
-	margin-right: 30px;
+	padding-bottom: 130px;
 }
 
 
 /* SECTION02 */
-
-
-#bgcolor2{
-	width: 750px;
-	position: relative;
-}
-
-#bgcolor2-image{
-	width: 750px;
-	height: 550px;
-	z-index: 0;
-}
-
 .footer-section02{
-	margin-left: 140px;
-	text-align: center;
-	float: left;
-	background: #232F3E;
-	position: relative;
-	margin-top: -720px;
+	float: none;
+	padding-top: 30px;
+	margin-right: 100px;
+	width: 1520px;
 }
 
 #footer-sec2-hr{
-	width: 1000px;
-	overflow: hidden;
-	margin-left: -200px;
+	border: rgb(184, 184, 184) 1px solid;
+	width: 1520px;
 }
 
-#fs02-01, #fs02-02, #fs02-03, #fs02-04{
-	text-align: center;
-	float: left;
+#fs02-01{
+	vertical-align: middle;
+	display: inline-block;
 	background: #232F3E;
+}
+
+#fs02-02, #fs02-03, #fs02-04{
+	color: white;
+	background: #232F3E;
+	border: 1px white solid;
+	margin-left: 20px;
 }
 
 
 /* SECTION03 */
-
-
 .footer-section03{
-	height: fit-content;
-	font-size: 1px;
+	padding: 30px 0px 30px 140px;
 	float: left;
+	width: 1520px;
 	background: #131A22;
-	position: relative;
-	text-align: left;
-	margin-left: 20px;
-	position: absolute;
-	margin-top: -550px;
+	font-size: 2px;
 }
 
 #fs03-01, #fs03-02, #fs03-03, #fs03-04, #fs03-05, #fs03-06, #fs03-07{
 	float: left;
-	font-size: 1px;
-	margin-left: 2px;
-	width: 100px;
-	overflow: hidden;
-	background: #131A22;
+	background: #131A22; 
+	margin: 0px 35px 0px 35px;
+	text-align: left;
 }
 
 
 /* SECTION 04 */
-
-
 .footer-section04{
-	text-align: center;
-	font-size: 1px;
-	width: 750px;
-	overflow: hidden;
-	float: left;
 	background: #131A22;
-	position: relative;
-	padding: 50px;
+	padding: 30px 0px 30px 0px;
+}
+
+/* 첨가 */
+div.fi{	
+	display: none;
+	/* font-family: "amazon-font";
+	padding: 15px;
+	padding-left: 10px;
+	padding-right: 10px;
+	text-align: center;
+	background-color: white;
 	position: absolute;
-	margin-top: -150px;
+	margin-left: 1200px;
+	margin-top: -35px;
+	font-size: 12px;
+	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
+ */
+}
+
+.fi:after {
+	border-top:0px solid transparent;
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
+	border-bottom: 10px solid white;
+	content:"";
+	position: absolute;
+	top:-10px;
+	left:70px;
+}
+
+
+#fi-btn{
+	font-size: 15px;
+	border-radius: 5px;
+	background-color: #F0C454;
+	width: 100px;
+	height: 30px;
+}
+
+.hidden_div_1 {
+	overflow: scroll;
+	font-family: "amazon-font";
+	line-height: 170%;
+	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
+	overflow: hidden;
+	border-radius: 10px;
+	padding: 20px;
+	z-index: 9998;
+	position: absolute;
+	width: 300px;
+	height: 400px;
+	background-color: white;
+	margin: 10px 0px 0px 570px;
+	display: none;
+}
+
+#hidden_div_1_font{
+	font-size: 20px;
+	overflow: hidden;
+	margin: -40px 0px 0px -20px;
+	padding: 0px 0px 20px 20px;
+	width: 350px;
+	height: 70px;
+	background-color: #F0F0F0;
+}
+
+#btn_view_02{
+	font-size: 15px;
+	border-radius: 5px;
+	background-color: #F0C454;
+	width: 300px;
+	height: 30px;
+}
+
+.hr-sect {
+	display: flex;
+	flex-basis: 100%;
+	align-items: center;
+	color: rgba(0, 0, 0, 0.35);
+	font-size: 12px;
+	margin: 8px 0px;
+  }
+
+.hr-sect::before, .hr-sect::after {
+	content: "";
+	flex-grow: 1;
+	background: rgba(0, 0, 0, 0.35);
+	height: 1px;
+	font-size: 0px;
+	line-height: 0px;
+	margin: 0px 16px;
+  }
+
+#btn_view_03{
+	margin-top: 2px;
+	width: 200px;
+	float: left;
+}
+
+#btn_view_03::placeholder{
+	color: #bbbbbb;
+}
+
+#result{
+	color: #CC1C39
+}
+
+#apply{
+	float: left;
+	width: 80px;
+	margin: 0px 0px 0px 10px;
+	padding: 0x 15px 0px 15px;
+	box-shadow: 0 1px 1px 0 rgba(141, 141, 141, 0.5);
+	background-color: #E3E6E6;
+	border-radius: 3px;
+}
+
+#btn_view_04{
+	border: 1px solid rgb(146, 146, 146);
+	width: 294px;
+	height: 50px;
+}
+
+#deliver_button_font{
+	color: gray;
+	font-size: 12px;
+}
+
+#deliver_button_font_2{
+	color: rgb(173, 29, 29);
+	font-size: 14px;
+}
+
+#done{
+	width: 80px;
+	margin: 10px 0px 0px 214px;
+	padding: 10px 10px 10px 10px;
+	box-shadow: 0 2px 2px 0 rgba(141, 141, 141, 0.5);
+	background-color: #F0C454;
+	border-radius: 3px;
 }
